Implement pending lead invitations
